cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/unnamed_enum_typedef.cpp
class D
{
public:
    typedef enum
    {
        MyEnum_ValOne, // <--- Unable to resolve identifier
        MyEnum_ValTwo  // <--- Unable to resolve identifier
    } MyEnum;
};

int main() {
    D::MyEnum k = D::MyEnum_ValOne;
    return 0;
}
